Fix testimonials header text align

--- a/common.blocks/testimonials/testimonials.scss
+++ b/common.blocks/testimonials/testimonials.scss
@@ -20,6 +20,5 @@
   &__header-wrap {
     grid-column: 1/1;
     grid-row: 1/1;
-    width: 28.4vw;
   }
 }
